--- a/Boggle/Boggle.csproj
+++ b/Boggle/Boggle.csproj
@@ -34,6 +34,10 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="ExtendedRandom, Version=0.9.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\packages\ExtendedRandom.0.9.0.0\lib\net35\ExtendedRandom.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
@@ -52,6 +56,7 @@
         </ApplicationDefinition>
         <Compile Include="Model\DiceBag.cs" />
         <Compile Include="RandomNumberGenerator.cs" />
+        <Compile Include="Utilities.cs" />
         <Page Include="MainWindow.xaml">
             <Generator>MSBuild:Compile</Generator>
             <SubType>Designer</SubType>
@@ -81,6 +86,7 @@
     </ItemGroup>
     <ItemGroup>
         <None Include="App.config" />
+        <None Include="packages.config" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
